# KatePlugin-IndexView

./: .gitignore  CMakeLists.txt  HACKING  README.md
index-view/: CMakeLists.txt  Messages.sh  bash_parser.cpp  bash_parser.h  cpp_parser.cpp  cpp_parser.h  document_parser.cpp  document_parser.h  ecma_parser.cpp  ecma_parser.h  filter_box.cpp  filter_box.h  fortran_parser.cpp  fortran_parser.h  go_parser.cpp  go_parser.h  icon_collection.cpp  icon_collection.h  index_view.cpp  index_view.h  kate_plugin_index_view.cpp  kate_plugin_index_view.h  kate_plugin_index_view_config_page.ui  kate_plugin_index_view_config_page_about_parser.ui  kateindexviewplugin.desktop  kateindexviewplugin.json  markdown_parser.cpp  markdown_parser.h  parser.cpp  parser.h  perl_parser.cpp  perl_parser.h  php_parser.cpp  php_parser.h  plaintext_parser.cpp  plaintext_parser.h  plugin.qrc  plugin_katesymbolviewer.cpp  plugin_katesymbolviewer.h  program_parser.cpp  (+18 more)
tests/: testfile.adoc  testfile.c  testfile.cpp  testfile.diff  testfile.f95  testfile.go  testfile.js  testfile.md  testfile.pl  testfile.rb  testfile.sh  testfile.txt  testfile.xslt
tests/reports/: testfile.adoc.txt  testfile.c.txt  testfile.cpp.txt  testfile.diff.txt  testfile.f95.txt  testfile.go.txt  testfile.js.txt  testfile.md.txt  testfile.php.txt  testfile.pl.txt  testfile.py.txt  testfile.rb.txt  testfile.sh.txt  testfile.tcl.txt  testfile.txt.txt  testfile.xslt.txt
